<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="start_a_new_bill_text">Start a New Bill</string>
    <string name="total_before_tax_text">Total (before tax)</string>
    <string name="edittext_balance_before_taxes">$0.00</string>
    <string name="taxes_text">Taxes</string>
    <string name="edittext_taxes">$0.00</string>
    <string name="go">GO</string>
    <string name="deduct_an_amount_btn">Deduct an amount</string>
    <string name="split_remaining_btn">Split remaining</string>
    <string name="view_people_btn">View People</string>
    <string name="balance_textview_chooseActionActivity">Balance:  </string>
    <string name="dollar_sign_text">$</string>
    <string name="BALANCE">0.00</string>
    <string name="cancel_btn">Cancel</string>
    <string name="deduct_an_amount_text">Deduct an Amount</string>
    <string name="person_textview">Person</string>
    <string name="enter_name_here_edittext">enter name here</string>
    <string name="amount_textview">Amount</string>
    <string name="zero_dollars_hint">$0.00</string>
    <string name="add_tax_text">Add tax?</string>
    <string name="go_back">go back</string>
    <string name="done_btn_deduct">done</string>
    <string name="split_balance_textview">Number of People Splitting the Balance:</string>
    <string name="done_btn_spilt_bal">Done</string>
    <string name="colon">:</string>
    <string name="dollar_sign_textview">$</string>
    <string name="email_btn">email</string>
    <string name="select_an_option_textview">Select an Option</string>
</resources>
