<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.robynsilber.splitthebill.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_a_new_bill_text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_before_tax_text"/>

    <EditText
        android:hint="@string/edittext_balance_before_taxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balance_EditText"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxes_text"/>

    <EditText
        android:hint="@string/edittext_taxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taxes_EditText"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/go"
        android:onClick="createBill"/>

</LinearLayout>
